--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "chess-client",
-  "version": "1.09.0000",
+  "version": "1.10.0000",
   "private": true,
-  "description": "Chess client — static site with vanilla JavaScript"
+  "description": "Chess client — static site with vanilla JavaScript",
+  "dependencies": {
+    "playwright": "^1.58.2"
+  }
 }
